--- a/salesmvc/Views/Sellers/Index.cshtml
+++ b/salesmvc/Views/Sellers/Index.cshtml
@@ -5,6 +5,11 @@
 }
 
 <h1>@ViewData["Title"]</h1>
+
+<p>
+    <a asp-action="Create" class="btn">Create New</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="success">
